# pii-redaction

./: analysis.py  config.py  dev.py  dev_gemma_test.py  dev_llm_redaction.py  pyproject.toml
data/: pii_masking_300k_dlp_results.csv  pii_masking_300k_gemini_costs.csv  pii_masking_300k_gemini_results.csv  pii_masking_300k_gemini_unmatched.csv  pii_masking_300k_gemma_results.csv  pii_masking_300k_gemma_unmatched.csv  pii_masking_300k_ollama_gemma312b-it-qat_results.csv  pii_masking_300k_ollama_gemma312b-it-qat_unmatched.csv  pii_masking_300k_ollama_gemma34b-it-qat_results.csv  pii_masking_300k_ollama_gemma34b-it-qat_unmatched.csv  pii_masking_300k_ollama_gemma3_12b_qat_results.csv  pii_masking_300k_ollama_gemma3_12b_qat_unmatched.csv  pii_masking_300k_ollama_gemma3_1b_results.csv  pii_masking_300k_ollama_gemma3_1b_unmatched.csv  pii_masking_300k_ollama_gemma3_4b_results.csv  pii_masking_300k_ollama_gemma3_4b_unmatched.csv  pii_masking_300k_ollama_gemma3ne4b_results.csv  pii_masking_300k_ollama_gemma3ne4b_unmatched.csv  pii_masking_300k_samples.csv
data_pipeline/: 01_select_data.py  02_pii_redaction_dlp.py  03_pii_redaction_gemini.py  04_pii_redaction_gemma.py
src/pii_redaction/: __init__.py  config.py  data_loader.py  detection.py  evaluation.py  paths.py
src/pii_redaction/llm/: clients.py
