[project]
name = "pii-redaction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "cgroll", email = "groll.christian.edu@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "google-cloud-dlp>=3.31.0",
    "google-genai>=1.24.0",
    "huggingface-hub[cli]>=0.33.2",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.6",
    "langchain-openai>=0.3.27",
    "matplotlib>=3.10.3",
    "ollama>=0.5.1",
    "openai>=1.93.0",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "transformers>=4.53.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
